Fix logo css on mobile

--- a/src/app/components/styles/header.module.css
+++ b/src/app/components/styles/header.module.css
@@ -16,9 +16,14 @@
   height: auto;
 }
 
+.logoLink img {
+  width: 100%;
+}
+
 @media screen and (max-width: 650px) {
   .logoLink {
     width: 100px;
+    object-fit: cover;
   }
 }
 
